Falando sobre a entrada e saida

--- a/doc/tp3.tex
+++ b/doc/tp3.tex
@@ -269,14 +269,9 @@ Sendo:
   heurística (textit{heuristica}).
 \end{itemize}
 
-Todos os arquivos e/ou palavras chaves que forem listados devem estar na mesma linha 
-iniciada pelo arquivo com o qual se relaciona e devem estar separados entre si apenas por
-um caractere ";".
+% falar sobre o arquivo de distancias
 
-Como convenção, adotei uma regra que havia sido definida no fórum da disciplina e optei 
-por utilizar textos sem acentuação nos caracteres, sem "til" e sem cedilha. Para tal, 
-antes de executar o programa eu utilizei o script de minha autoria que foi disponibilizado
-no fórum para tratar todas as entradas e obtê-las sem acentuação.
+% falar sobre o formato da saida
 
 \subsection{Compilação}
 O compilador utilizado neste trabalho foi o GCC (adotado como padrão para a disciplina) e 
