--- a/doc/tp3.tex
+++ b/doc/tp3.tex
@@ -37,10 +37,16 @@
 \maketitle
 
 \begin{resumo}
-
-escrever uma breve introdução que aborda um pouco sobre np, heuristicas e as 
-coisas abordadas nesse trabalho
-
+Muitas aplicações em computação necessitam considerar um conjunto de conexões entre pares 
+de objetos, como por exemplo: a distância a ser percorrida de uma cidade A até uma cidade B.
+O grafo é uma estrutura de dados utilizada para modelar tais tipos de relações diversas entre
+um conjunto de entidades e através de algumas operações com este tipo de dados podemos resolver
+problemas extremamente complexos. Às vezes um problema é de natureza tão complexa que não 
+podemos resolvê-lo de uma forma eficiente encontrando a sua resposta. Essa classe de problemas 
+abrange uma grande área de estudo da computação que permite identificar tais problemas e tomar 
+decisões ao se trabalhar com eles de forma a dar-lhes uma aplicação prática. Este trabalho irá
+trabalhar sobre uma variação do clássico Problema do Caixeiro viajante e analisar a sua 
+resolução utilizando diferentes métodos.
 \end{resumo}
 
 \section{Introdução}
