--- a/doc/tp3.tex
+++ b/doc/tp3.tex
@@ -133,9 +133,19 @@ conhecida como \textbf{Heurística do Vizinho Mais Próximo}. Esta, funciona ass
 \end{footnotesize}
 \end{algorithm}
 
-A heurística é um algoritmo guloso que itera fazendo as melhores escolhas locais, ou seja:
+É um algoritmo guloso que itera fazendo as melhores escolhas locais, ou seja:
 pega sempre a menor distância entre a cidade atual e uma cidade do conjunto de cidades ainda
-não visitadas disponíveis, até completar o percurso.
+não visitadas disponíveis, até completar o percurso. Ela serve para resolver o PCV simples. 
+Utilizamos uma adaptação da heurística do vizinho mais próximo para resolver o nosso problema.
+Os dados fornecidos são os mesmo do problema anterior acrescidos das restrições já discutidas na 
+Introdução. Os passos são os seguintes:
+
+\begin{itemize}
+  \item À partir da cidade inicial/atual, verificar se existe alguma região que tem necessidade
+  de ser visitada
+  
+  %acabar de descrever e fazer este algoritmo
+\end{itemize}
 
 % algoritmo da heuristica:
 % modificacao na heuristica do vizinho mais proximo
